InterSpec_resources/InterSpec.css
/* ... */
.Wt-tableview .Wt-spacer 
{
/* background: white;*/
}


.URLogo
{
    padding-top: 3px;
    padding-right: 8px;
}


.PopupMenuParentButton, .PopupMenuParentButton:hover
{
  height: 23px; /*leave 1 px for UpperMenuDivWithLogos lower border */
  padding: 4px 8px 3px 8px;
  margin:0px 0px;
  font-weight:normal;
  background: #FFFFFF; color: black;
  border: none;
  -moz-border-radius: 0px;
  -webkit-border-radius: 0px;
  border-radius: 0px;
  
  -moz-box-shadow: none !important;
  -webkit-box-shadow: none !important;
  box-shadow: none !important;
  outline: none;

}

.UpperMenuDivWithLogos
{
  height: 24px;  /*pics are 18px with 3px top padding*/
  font-size: 15px;
  padding-top: 0px;
  border-bottom: 1px solid grey;
  background: #FFF;
}


/*.PopupMenuParentButton:hover{background: #E6E6E6;}*/

.PopupMenuParentButton.active
{
  background: grey;
  
  -moz-box-shadow: none !important;
  -webkit-box-shadow: none !important;
  box-shadow: none !important;
}


.PopupDivMenuWidget.active
{
  background-color: #FAFAFA;
  color: black;
}


.NumPeakSelect
{
  border:2px solid blue;
}


.ReferencePhotopeakDisplay
{
  margin-top: 5px;
  margin-left: 5px;
  margin-right: 4px;
  margin-bottom: 3px;
}

.ParticleViewTable, .FilesInZipTable
{
/*  width:37.5em; */
/*  height: 15.2em; */
  border: 2px solid #e1e1e1;
}



.legend
{
border: none;
background: none;
-webkit-border-radius: 5px;
-moz-border-radius: 5px;
border-radius: 5px;
}


.legend-body
{
/*  background: #EEEEEE;*/
/*background: #FAFAFA;*/
background: rgba(245,245,245,0.5);
padding: 4px 6px 4px;
border: solid 1px rgba(185,185,185,0.80); /*#909090;*/
border-top:none;
-webkit-border-bottom-right-radius: 5px;
-webkit-border-bottom-left-radius: 5px;
-moz-border-radius-bottomright: 5px;
-moz-border-radius-bottomleft: 5px;
border-bottom-right-radius: 5px;
border-bottom-left-radius: 5px;
color:#000000;
}

.legend-body
{
  white-space:nowrap;
}

.legend-title
{
 min-width: 7em;
 background-color: rgba(185,185,185,0.80) !important;
 height: 20px;
border: solid 1px rgba(185,185,185,0.80); /*#909090;*/
border-bottom:none;
-webkit-border-top-right-radius: 5px;
-webkit-border-top-left-radius: 5px;
-moz-border-radius-topright: 5px;
-moz-border-radius-topleft: 5px;
border-top-right-radius: 5px;
border-top-left-radius: 5px;
}

.legend-title .closeicon
{
top: 3px;
}

.legend-title:hover
{
background-color: #909090 !important;
border: solid 1px #909090;
}

.closeicon-wtdefault
{
background: transparent url(../resources/themes/default/closeicons-tab.png) no-repeat scroll right top;
margin: 2px 4px 0px 0px;
height: 13px;
width: 13px;
border: 0px;
padding: 0px;
/*margin-top: 2px;*/
cursor: default;
}

.closeicon-wtdefault:hover
{
background-position: right -13px;
margin: 2px 4px 0px 0px;
height: 13px;
width: 13px;
border: 0px;
padding: 0px;
cursor: default;
}


.loading
{
  cursor: wait !important;
}




.CompactFileManager
{
  padding-top: 5px;
  padding-left: 5px;
  margin-right: -1px;
  padding-bottom: 3px;
  overflow-y: hidden;
}


div.CompactSampleWrapper
{
  border-color: grey;
  border-style: ridge;
  border-width: 1px;
  padding: 5px;
  margin-right: 5px;
}


.CompactManagerButtons
{
  margin-right: 5px;
  margin-top: 3px;
}

.img-centered
{
  display: block;
  margin-left: auto;
  margin-right: auto;
  text-align: centered;
}

div.displaySampleDiv  
{
  /*Used in the CompactFileManager class*/
  text-align: center;
  padding-top: 5px;
  /*display: block;*/
  /*margin-left: auto;*/
  /*margin-right: auto;*/
}

.displaySampleSelect
{
  width: 95%;
}

.displayPrevSample
{
  position: relative;
  top: 6px;
  width: 22px;
  height: 22px;
  margin-right: 10px;
}

.displayNextSample
{
  position: relative;
  top: 6px;
  width: 22px;
  height: 22px;
  margin-left: 10px;
}

.displaySampleInput
{
}


.CompactInfoTxt
{
  color: gray;
  /*vertical-align: text-bottom;*/
  /*position: absolute;*/
  /*bottom: 5px;*/
}

.CompactSpecTitle
{
}


.SpecNormTxt
{
  width: 5em;
}



/*
 This allows buttons and links to work
 */
.TransparentFooter > button, .TransparentFooter > a, .TransparentFooter > img, .TransparentFooter > input
{
    pointer-events:auto;

}

.TransparentFooter
{
/*    padding: 2px 2px 10px; */
    margin-bottom: 0;
    text-align: right;
    white-space:nowrap;
    height: 20px;
    border-top: 1px solid #ddd;
    
    pointer-events:none;
    background:rgba(0,0,0,0.2);
}


.LoadingIndicator
{
    /* Set the index really high */
    z-index:2000000000 !important;
}
.HeaderIcon
{
/*  position: 3px center;*/
  padding: 4px;
  padding-right: 6px;
/*  padding-top: 5px;*/
}


a.LoadSpectrumSaveAsLink
{
color: #454545;
}
a.LoadSpectrumSaveAsLink:hover
{
color: blue;
}



.DetectorDisplay
{
  padding: 0px;
  margin: 0px;
  padding-right: 3px;
  font-weight: bold;
  background: #888888; color: #FFFFFF;
  border: 1px solid #e1e1e1;
  cursor: pointer;
  height: 24px;
  white-space: nowrap;
  overflow: hidden;
  max-width: 275px;
}

.DetectorDisplay > span
{
  display: inline-block;
  vertical-align: middle;
  height: 24px;
}

.DetectorDisplay > img
{
  /* Imge is 16px high, so 3px top margin will center image*/
  margin-top: 3px;
  margin-left: 5px;
  margin-right: 5px;
}


.UseInstructionHeader
{
  font-size: 24px;
  font-weight: bold;
  margin-top: 5px;
  text-align :center;
}

.UseInstructionSection
{
  border: solid 1px grey;
  margin-bottom:10px;
}


.qtip-grey
{
  background-color: rgba(255, 255, 255, 0.96);
  border-color: rgba(182, 182, 182, 0.7);
  color: rgb(187, 187, 187)
}

.qtip-titlebar
{
  background-color:#B0DE78
}


/* Customize WTabWidget to look a little more modern/flat */
br.Wt-tabs-clear
{
  /*Fix an undesired display isue with WTabWidget (at least Wt pre 3.3.4)*/
  display: none;
}
/* ... */

